--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
@@ -1,14 +1,15 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
-  "AllowedHosts": "*",
   "AuthSetting": {
     "secret": "This is JWT Secret Key",
-    "issuer": "ResellTicketAPI",
-    "audience": "audience",
+    "issuer": "ResellTicketAdminAPI",
+    "audience": "audienceAdmin",
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
