--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
@@ -7,8 +7,8 @@
   "AllowedHosts": "*",
   "AuthSetting": {
     "secret": "This is JWT Secret Key",
-    "issuer": "ResellTicketAPI",
-    "audience": "audience",
+    "issuer": "ResellTicketAdminAPI",
+    "audience": "audienceAdmin",
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
