--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -5,5 +5,15 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "AuthSetting": {
+    "secret": "This is JWT Secret Key",
+    "issuer": "ResellTicketAPI",
+    "audience": "audience",
+    "accessExpiration": 30,
+    "refreshExpiration": 60
+  },
+  "ConnectionStrings": {
+    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
 }
