--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-﻿################################################################################
+################################################################################
 # This .gitignore file was automatically created by Microsoft(R) Visual Studio.
 ################################################################################
 
@@ -13,3 +13,8 @@
 /Web/ResellTicketSolution/WebAPI/obj
 /Web/ResellTicketSolution/WebAPI.Admin/bin/Debug/netcoreapp2.2
 /Web/ResellTicketSolution/WebAPI.Admin/obj
+Web/ResellTicketSolution/Core/bin/
+Web/ResellTicketSolution/Service/bin/
+Web/ResellTicketSolution/ViewModel/bin/
+Web/ResellTicketSolution/WebAPI.Admin/bin/
+Web/ResellTicketSolution/WebAPI/bin/
