RT: refactor code

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@ Web/ResellTicketSolution/Service/bin/
 Web/ResellTicketSolution/ViewModel/bin/
 Web/ResellTicketSolution/WebAPI.Admin/bin/
 Web/ResellTicketSolution/WebAPI/bin/
+Web/ResellTicketSolution/Core/Migrations/
