--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@ Web/ResellTicketSolution/ViewModel/bin/
 Web/ResellTicketSolution/WebAPI.Admin/bin/
 Web/ResellTicketSolution/WebAPI/bin/
 Web/ResellTicketSolution/Core/Migrations/
+Web/ResellTicketSolution/WebClient.Admin/package-lock.json
