--- a/Web/ResellTicketSolution/WebAPI/WebAPI.csproj
+++ b/Web/ResellTicketSolution/WebAPI/WebAPI.csproj
@@ -15,6 +15,11 @@
     <AspNetCoreHostingModel>OutOfProcess</AspNetCoreHostingModel>
   </PropertyGroup>
   
+  <PropertyGroup>
+    <DeployOnBuild>true</DeployOnBuild>
+    <PublishProfile>DeployCustomerAPI</PublishProfile>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="6.1.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
@@ -30,5 +35,10 @@
     <ProjectReference Include="..\Service\Service.csproj" />
     <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
   </ItemGroup>
+
+  <Target Name="AfterBuild">
+    <MSBuild Condition="'$(DeployOnBuild)'=='true' AND '$(PublishProfile)'!=''" Projects="$(MSBuildProjectFullPath)"
+             Properties="DeployOnBuild=true;PublishProfile=$(PublishProfile);BuildingInsideVisualStudio=False"/>
+  </Target>
 
 </Project>
