RT-004: Complete User Management Feature

--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
@@ -10,7 +10,8 @@
     "issuer": "ResellTicketAdminAPI",
     "audience": "audienceAdmin",
     "accessExpiration": 30,
-    "refreshExpiration": 60
+    "refreshExpiration": 60,
+    "DefaultPassword":  "123123"
   },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
