--- a/Web/ResellTicketSolution/WebClient.Admin/package.json
+++ b/Web/ResellTicketSolution/WebClient.Admin/package.json
@@ -26,6 +26,7 @@
     "flag-icon-css": "^3.3.0",
     "font-awesome": "^4.7.0",
     "history": "^4.9.0",
+    "jwt-decode": "^2.2.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
