RT: Disable deploy on build feature

--- a/Web/ResellTicketSolution/WebAPI.Admin/WebAPI.Admin.csproj
+++ b/Web/ResellTicketSolution/WebAPI.Admin/WebAPI.Admin.csproj
@@ -16,7 +16,7 @@
   </PropertyGroup>
 
   <PropertyGroup>
-    <DeployOnBuild>true</DeployOnBuild>
+    <DeployOnBuild>false</DeployOnBuild>
     <PublishProfile>DeployAPIAdmin</PublishProfile>
   </PropertyGroup>
  
