--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -13,6 +13,11 @@
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
+  "TwilioSetting": {
+    "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
+    "AuthToken": "4403a885689cbf7c6e4a55018688398e",
+    "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
+  },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
