RT-017: Add Stringee SMS Service

--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -13,6 +13,12 @@
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
+  "StringeeSetting": {
+    "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
+    "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
+    "FromName": "Notify-GSMS-VSMS",
+    "Subject":  "Resell Ticket"
+  },
   "TwilioSetting": {
     "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
     "AuthToken": "4403a885689cbf7c6e4a55018688398e",
