--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -12,10 +12,16 @@
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
+  "StringeeSetting": {
+    "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
+    "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
+    "FromName": "Notify-GSMS-VSMS",
+    "Subject": "Resell Ticket"
+  },
   "TwilioSetting": {
-    "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
-    "AuthToken": "4403a885689cbf7c6e4a55018688398e",
-    "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
+    "AccountSID": "AC79ee01c64647a263fc18e7c43544ea27",
+    "AuthToken": "b62de50566e1ccc634e43056f0d3c269",
+    "MessageServiceId": "MG951dce3735f7d0580f50d3accf5ed214"
   },
     "ConnectionStrings": {
       "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
