RT0019 transportation ver1

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@ Web/ResellTicketSolution/WebAPI.Admin/bin/
 Web/ResellTicketSolution/WebAPI/bin/
 Web/ResellTicketSolution/Core/Migrations/
 Web/ResellTicketSolution/WebClient.Admin/package-lock.json
+Mobile/ResellTicketCustomerMobile/package-lock.json
