--- a/Mobile/ResellTicketCustomerMobile/package.json
+++ b/Mobile/ResellTicketCustomerMobile/package.json
@@ -12,6 +12,7 @@
     "native-base": "^2.12.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-autocomplete-input": "^4.1.0",
     "react-native-autosuggest": "^1.0.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
