--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
@@ -14,6 +14,6 @@
     "DefaultPassword":  "123123"
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
+    "ResellTicketDB": "Server=localhost;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
   }
 }
