--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -14,17 +14,17 @@
     "refreshExpiration": 60
   },
   "StringeeSetting": {
-    "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
-    "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
+    "APIKeySID": "SKlZY5YMbpO0B2Amn2xZ7ptgKWBdScDnpZ",
+    "APIKeySecret": "cWlwdm1XNjNOMWNrTzNUdmh3MEdBVXJJa09xUDlHN1k=",
     "FromName": "Notify-GSMS-VSMS",
-    "Subject":  "Resell Ticket"
+    "Subject": "Resell Ticket"
   },
   "TwilioSetting": {
-    "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
-    "AuthToken": "4403a885689cbf7c6e4a55018688398e",
-    "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
+    "AccountSID": "AC1c362331355ad3341d8af6b54107e963",
+    "AuthToken": "727c4eb8b0b783de07e50ac11bc25c42",
+    "MessageServiceId": "MGf356081ba45d6351c3135761fe6db7e1"
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
+    "ResellTicketDB": "Server=localhost;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
   }
 }
