--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
@@ -14,6 +14,6 @@
     "refreshExpiration": 60
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=localhost;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
+    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
 }
