Revert commit appSetting.json

--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -24,6 +24,6 @@
     "MessageServiceId": "MG951dce3735f7d0580f50d3accf5ed214"
   },
     "ConnectionStrings": {
-      "ResellTicketDB": "Server=hoaiphuong;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
+      "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
     }
   }
