--- a/Web/ResellTicketSolution/WebClient.Admin/package.json
+++ b/Web/ResellTicketSolution/WebClient.Admin/package.json
@@ -33,6 +33,7 @@
     "react-app-polyfill": "^1.0.1",
     "react-chartjs-2": "^2.7.6",
     "react-dom": "^16.8.6",
+    "react-number-format": "^4.0.8",
     "react-redux": "^7.0.3",
     "react-redux-toastr": "^7.5.1",
     "react-router-config": "^5.0.0",
