--- a/Mobile/ResellTicketCustomerMobile/package.json
+++ b/Mobile/ResellTicketCustomerMobile/package.json
@@ -14,6 +14,7 @@
     "react-native": "0.59.8",
     "react-native-autocomplete-input": "^4.1.0",
     "react-native-autosuggest": "^1.0.1",
+    "react-native-credit-card-input": "^0.4.1",
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal-datetime-picker": "^7.4.2",
