--- a/Web/ResellTicketSolution/Service/Service.csproj
+++ b/Web/ResellTicketSolution/Service/Service.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Stripe.net" Version="23.0.0" />
     <PackageReference Include="Twilio" Version="5.29.1" />
   </ItemGroup>
 
