--- a/Mobile/ResellTicketCustomerMobile/android/app/build.gradle
+++ b/Mobile/ResellTicketCustomerMobile/android/app/build.gradle
@@ -138,6 +138,7 @@ android {
 }
 
 dependencies {
+    implementation project(':react-native-onesignal')
     implementation project(':react-native-toasty')
     implementation project(':react-native-gesture-handler')
     implementation project(':react-native-vector-icons')
