--- a/Mobile/ResellTicketCustomerMobile/android/settings.gradle
+++ b/Mobile/ResellTicketCustomerMobile/android/settings.gradle
@@ -1,4 +1,6 @@
 rootProject.name = 'ResellTicketCustomerMobile'
+include ':react-native-onesignal'
+project(':react-native-onesignal').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-onesignal/android')
 include ':react-native-toasty'
 project(':react-native-toasty').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-toasty/android')
 include ':react-native-gesture-handler'
