--- a/Mobile/ResellTicketCustomerMobile/package.json
+++ b/Mobile/ResellTicketCustomerMobile/package.json
@@ -18,6 +18,7 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal-datetime-picker": "^7.4.2",
+    "react-native-onesignal": "^3.2.14",
     "react-native-toasty": "^0.0.4",
     "react-native-vector-icons": "^6.4.2",
     "react-navigation": "^3.11.0",
