--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
@@ -13,6 +13,11 @@
     "accessExpiration": 30,
     "refreshExpiration": 60
   },
+  "OneSignalSetting": {
+    "appId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
+    "restApiKey": "ZTdmZGQ4MWItMDhjNy00ZDE4LWI2NzktNGRhZDAwZWFhYmZi",
+    "AuthKey": "ZTM2MDQ1YjgtMmFiZi00NmExLTk2YjctMmRmNzE0NjVmYjc3"
+  },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
