--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -24,7 +24,8 @@
     "MessageServiceId": "MG951dce3735f7d0580f50d3accf5ed214"
   },
   "CrediCardSetting": {
-    "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
+    "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
+    "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
   },
     "ConnectionStrings": {
       "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
