RT-082-084: OneSignal push noti to web customer and web admin

--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -14,17 +14,21 @@
     "refreshExpiration": 60
   },
   "StringeeSetting": {
-    "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
-    "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
+    "APIKeySID": "SKlZY5YMbpO0B2Amn2xZ7ptgKWBdScDnpZ",
+    "APIKeySecret": "cWlwdm1XNjNOMWNrTzNUdmh3MEdBVXJJa09xUDlHN1k=",
     "FromName": "Notify-GSMS-VSMS",
-    "Subject":  "Resell Ticket"
+    "Subject": "Resell Ticket"
   },
   "TwilioSetting": {
     "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
     "AuthToken": "4403a885689cbf7c6e4a55018688398e",
     "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
   },
+  "OneSignalSetting": {
+    "customerAppId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
+    "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
+  },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
+    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
   }
 }
