--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -13,8 +13,8 @@
     "refreshExpiration": 60
   },
   "StringeeSetting": {
-    "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
-    "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
+    "APIKeySID": "SKlZY5YMbpO0B2Amn2xZ7ptgKWBdScDnpZ",
+    "APIKeySecret": "cWlwdm1XNjNOMWNrTzNUdmh3MEdBVXJJa09xUDlHN1k=",
     "FromName": "Notify-GSMS-VSMS",
     "Subject": "Resell Ticket"
   },
@@ -27,6 +27,6 @@
     "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ"
   },
     "ConnectionStrings": {
-      "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
+      "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
     }
   }
