--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
@@ -14,10 +14,11 @@
     "refreshExpiration": 60
   },
   "OneSignalSetting": {
-    "customerAppId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
-    "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
+    "appId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
+    "restApiKey": "ZTdmZGQ4MWItMDhjNy00ZDE4LWI2NzktNGRhZDAwZWFhYmZi",
+    "AuthKey": "ZTM2MDQ1YjgtMmFiZi00NmExLTk2YjctMmRmNzE0NjVmYjc3"
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=hoaiphuong"
+    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
 }
