--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -24,6 +24,10 @@
     "AuthToken": "4403a885689cbf7c6e4a55018688398e",
     "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
   },
+  "OneSignalSetting": {
+    "customerAppId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
+    "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
+  },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
