--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -17,12 +17,16 @@
     "APIKeySID": "SKA5PVQkuloA9f9OqwXjFufEuVFcleh9u5",
     "APIKeySecret": "OG9UUThIOTc2Z2trcTlPTDVYY1VVM2V6RjVrcGNBWkw=",
     "FromName": "Notify-GSMS-VSMS",
-    "Subject":  "Resell Ticket"
+    "Subject": "Resell Ticket"
   },
   "TwilioSetting": {
     "AccountSID": "ACc0d4d19395c30189487a89a06980f2f0",
     "AuthToken": "4403a885689cbf7c6e4a55018688398e",
     "MessageServiceId": "MGf60ff3c036c818f25ed3814730911002"
+  },
+  "CrediCardSetting": {
+    "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
+    "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
   },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
