create and view accoun connect

--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.Development.json
@@ -18,6 +18,10 @@
     "restApiKey": "ZTdmZGQ4MWItMDhjNy00ZDE4LWI2NzktNGRhZDAwZWFhYmZi",
     "AuthKey": "ZTM2MDQ1YjgtMmFiZi00NmExLTk2YjctMmRmNzE0NjVmYjc3"
   },
+  "CrediCardSetting": {
+    "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
+    "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
+  },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   }
