--- a/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI.Admin/appsettings.json
@@ -11,7 +11,11 @@
     "audience": "audienceAdmin",
     "accessExpiration": 30,
     "refreshExpiration": 60,
-    "DefaultPassword":  "123123"
+    "DefaultPassword": "123123"
+  },
+  "CrediCardSetting": {
+    "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
+    "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
   },
   "ConnectionStrings": {
     "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
