RT-046: Add Config for deploy beta test

--- a/Mobile/ResellTicketCustomerMobile/android/build.gradle
+++ b/Mobile/ResellTicketCustomerMobile/android/build.gradle
@@ -11,7 +11,6 @@ buildscript {
     repositories {
         google()
         jcenter()
-        jcenter()
         maven { url "https://maven.google.com" }
         maven { url "https://jitpack.io" }
     }
@@ -20,6 +19,9 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        // We recommend changing it to the latest version from our changelog:
+        // https://docs.fabric.io/android/changelog.html#fabric-gradle-plugin
     }
 }
 
