--- a/Mobile/ResellTicketCustomerMobile/android/app/src/main/AndroidManifest.xml
+++ b/Mobile/ResellTicketCustomerMobile/android/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 
     <application
+      android:usesCleartextTraffic="true"
       android:name=".MainApplication"
       android:label="@string/app_name"
       android:icon="@mipmap/ic_launcher"
@@ -23,6 +24,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="ac4e965cdde452112e5242c25b2adeee9347a4de" />
     </application>
 
 </manifest>
