RT-052: Send Email Receipt for Buyer

--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -27,11 +27,18 @@
     "secret": "0123456789ABCDEFGHIJKLMNOPQRSTUVWXYZ",
     "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
   },
-    "ConnectionStrings": {
-      "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
-    },
   "OneSignalSetting": {
-    "customerAppId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
     "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
+  },
+  "SendGridSetting": {
+    "sendGridKey": "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",
+    "title": "Resell Ticket Receipt",
+    "fromName": "Resell Ticket",
+    "fromEmail": "support@resellticket.com",
+    "street": "Quang Trung",
+    "city": "Ho Chi Minh City",
+    "addressNumber": "70000",
+    "phoneNumber": "0912345678",
+    "bussinessNumber": "0123456789"
   }
 }
