--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -29,10 +29,21 @@
     "secretStripe": "sk_test_qGUMkKnqGEznTP75HVwvRKcd00wFcYnqjH"
   },
   "OneSignalSetting": {
-    "customerAppId": "2c3cad5d-d711-4abb-b25a-5f5cf2c9b5d1",
+    "customerAppId": "c4684650-e12a-4623-844e-df79e1f8a6a9",
     "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
+    "ResellTicketDB": "Server=DESKTOP-TETPGPV\\SQLEXPRESS;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456"
+  },
+  "SendGridSetting": {
+    "sendGridKey": "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",
+    "title": "Resell Ticket Receipt",
+    "fromName": "Resell Ticket",
+    "fromEmail": "support@resellticket.com",
+    "street": "Quang Trung",
+    "city": "Ho Chi Minh City",
+    "addressNumber": "70000",
+    "phoneNumber": "0912345678",
+    "bussinessNumber": "0123456789"
   }
 }
