--- a/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.Development.json
@@ -33,7 +33,7 @@
     "adminAppId": "bcc5a63f-d900-4eb0-af8d-6a85c8dbd01b"
   },
   "ConnectionStrings": {
-    "ResellTicketDB": "Server=DESKTOP-TETPGPV\\SQLEXPRESS;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456"
+    "ResellTicketDB": "Server=.;Initial Catalog=ResellTicket_FU_Capstone;User Id=sa;Password=123456789"
   },
   "SendGridSetting": {
     "sendGridKey": "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",
