RT-052: Send Email Receipt for Buyer

--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -39,6 +39,7 @@
     "city": "Ho Chi Minh City",
     "addressNumber": "70000",
     "phoneNumber": "0912345678",
-    "bussinessNumber": "0123456789"
+    "bussinessNumber": "0123456789",
+    "term": "Due On Receipt"
   }
 }
