RT-127: Create email refund

--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -45,5 +45,6 @@
     "phoneNumber": "0912345678",
     "bussinessNumber": "0123456789",
     "term": "Due On Receipt"
+    "refundTitle": "Refund Detail"
   }
 }
