--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -44,7 +44,7 @@
     "addressNumber": "70000",
     "phoneNumber": "0912345678",
     "bussinessNumber": "0123456789",
-    "term": "Due On Receipt"
+    "term": "Due On Receipt",
     "refundTitle": "Refund Detail"
   }
 }
