RT-141: Create email replace

--- a/Web/ResellTicketSolution/WebAPI/WebAPI.csproj
+++ b/Web/ResellTicketSolution/WebAPI/WebAPI.csproj
@@ -38,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="EmailTemplate\EmailTemplateReplacement.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="EmailTemplate\EmailTemplateRefund.html">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
