--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -46,5 +46,6 @@
     "bussinessNumber": "0123456789",
     "term": "Due On Receipt",
     "refundTitle": "Refund Detail"
+    "replacementTitle": "Resell Ticket Replacement"
   }
 }
