empty page web cus

--- a/Web/ResellTicketSolution/WebAPI/appsettings.json
+++ b/Web/ResellTicketSolution/WebAPI/appsettings.json
@@ -45,7 +45,7 @@
     "phoneNumber": "0912345678",
     "bussinessNumber": "0123456789",
     "term": "Due On Receipt",
-    "refundTitle": "Refund Detail"
+    "refundTitle": "Refund Detail",
     "replacementTitle": "Resell Ticket Replacement"
   }
 }
