--- a/Mobile/ResellTicketCustomerMobile/package.json
+++ b/Mobile/ResellTicketCustomerMobile/package.json
@@ -20,7 +20,9 @@
     "react-native-elements": "^1.1.0",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-modal-datetime-picker": "^7.4.2",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-onesignal": "^3.2.14",
+    "react-native-sectioned-multi-select": "^0.7.0",
     "react-native-stripe": "^1.2.2",
     "react-native-stripe-api": "^0.1.0",
     "react-native-svg": "^9.5.1",
