--- a/Web/ResellTicketSolution/WebAPI.Admin/WebAPI.Admin.csproj
+++ b/Web/ResellTicketSolution/WebAPI.Admin/WebAPI.Admin.csproj
@@ -36,6 +36,24 @@
     <ProjectReference Include="..\ViewModel\ViewModel.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="EmailTemplate\EmailTemplate.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\EmailTemplateRefund.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\EmailTemplateReplacement.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\EmailTemplateSeller.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="EmailTemplate\TicketsTemplate.html">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
   <Target Name="AfterBuild">
     <MSBuild Condition="'$(DeployOnBuild)'=='true' AND '$(PublishProfile)'!=''" Projects="$(MSBuildProjectFullPath)"
              Properties="DeployOnBuild=true;PublishProfile=$(PublishProfile);BuildingInsideVisualStudio=False"/>
