--- a/Mobile/ResellTicketCustomerMobile/package.json
+++ b/Mobile/ResellTicketCustomerMobile/package.json
@@ -15,6 +15,7 @@
     "react-native": "^0.59.9",
     "react-native-autocomplete-input": "^4.1.0",
     "react-native-autosuggest": "^1.0.1",
+    "react-native-country-picker-modal": "^0.8.0",
     "react-native-credit-card-input": "^0.4.1",
     "react-native-dialog": "^5.6.0",
     "react-native-elements": "^1.1.0",
@@ -22,6 +23,7 @@
     "react-native-modal-datetime-picker": "^7.4.2",
     "react-native-numeric-input": "^1.8.3",
     "react-native-onesignal": "^3.2.14",
+    "react-native-phone-input": "^0.2.4",
     "react-native-sectioned-multi-select": "^0.7.0",
     "react-native-stripe": "^1.2.2",
     "react-native-stripe-api": "^0.1.0",
