--- a/Web/ResellTicketSolution/WebClient.Admin/package.json
+++ b/Web/ResellTicketSolution/WebClient.Admin/package.json
@@ -17,6 +17,7 @@
     "@coreui/icons": "0.3.0",
     "@coreui/react": "~2.5.0",
     "axios": "^0.18.0",
+    "axios-progress-bar": "^1.2.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.8.0",
     "classnames": "^2.2.6",
